add melhorias
